--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-gallery": "^1.3.0",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.0.7",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-image-gallery": "^1.2.0",
     "@types/react-transition-group": "^4.4.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
