--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
+    "@iconify/react": "^4.1.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "clsx": "^2.0.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.16.5",
     "next": "13.3.0",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -23,7 +27,8 @@
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.3.0",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.0.7",
+    "styled-components": "^6.1.6",
+    "tailwind-merge": "^2.0.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
