--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/noweWersje/nav/Navbar.jsx", "components/noweWersje/nav/Nav.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/noweWersje/nav/Navbar.jsx", "components/noweWersje/nav/Nav.jsx", "components/mainpagenew/OpisProduktow.jsx"],
   "exclude": ["node_modules"]
 }
