--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-image-gallery": "^1.3.0",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.6",
     "tailwind-merge": "^2.0.0",
